k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-app
  namespace: library
spec:
  selector:
    app: library-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
