k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-web
  namespace: library
spec:
  selector:
    app: library-web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
